fix(css): use the dark scrollbar with `color-scheme` dark (#702)

--- a/app/global.css
+++ b/app/global.css
@@ -26,6 +26,9 @@
     --sh-keyword: #f47067;
     --sh-string: #0fa295;
   }
+  html {
+    color-scheme: dark;
+  }
 }
 
 html {
